# GPGmeSample

./: .gitignore  CMakeLists.txt  README.md
src/: common.c  common.h  decrypt.c  decrypt_verify.c  encrypt.c  encrypt_sign.c  key_edit.c  list_keys.c  sign.c  verify.c
